# Yolo_tensorrt_lidar

./: .config.h.swp  CMakeLists.txt  Readme.md  SerialInterface.cpp  SerialInterface.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp  UDPSocket.h  _track.cpp  _track.h  config.h  depth_mode.cpp  recieve.cpp  run.sh  yolov5_mid_cloest.cpp  yolov5_trt.cpp
Infer/: CMakeLists.txt  Readme.md  SerialInterface.h  UDPSocket.cpp  callback.cpp  config.h  yolov5_trt.cpp  yolov5_trtcopy.cpp
Infer_color_lidar/: CMakeLists.txt  SerialInterface.cpp  config.h  depth_mode.cpp  rsTest.cpp  yolov5_mid_cloest.cpp  yolov5_trt.cpp
Infer_color_lidar/python/: app.py
Infer_color_lidar/python/templates/: index.html
python/: client.py
sort-cpp-master/sort-c++/: Hungarian.cpp  Hungarian.h
test/: test  test.cpp
